testsuite/tests/ghci/should_run/T21052.script
:set -ddump-stg-cg
:set -dsuppress-uniques

foo = ()
