testsuite/tests/ghci/should_fail/T18052b.script
:set -XMagicHash
let (%%%) = 1#
